--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -71,204 +71,201 @@
 
     <!-- Icon selected view -->
     <child>
-      <object class="GtkBox">
+      <object class="AdwToolbarView">
         <property name="visible" bind-source="IcoDetailsPanel" bind-property="iconIsSelected" />
-        <property name="orientation">vertical</property>
-        <property name="vexpand">true</property>
-        <child>
+        <property name="content">
           <object class="GtkScrolledWindow">
-          <property name="vexpand">true</property>
-          <property name="min-content-width">250</property>
-          <property name="max-content-width">300</property>
+            <property name="vexpand">true</property>
+            <property name="min-content-width">250</property>
+            <property name="max-content-width">300</property>
 
-        <!-- <child>
-          <object class="GtkLabel">
-            <property name="label">Icon name</property>
-            <property name="valign">1</property>
-            <property name="margin-top">8</property>
-            <property name="margin-bottom">24</property>
-            <style>
-              <class name="title-4"/>
-            </style>
+              <!-- <child>
+                <object class="GtkLabel">
+                  <property name="label">Icon name</property>
+                  <property name="valign">1</property>
+                  <property name="margin-top">8</property>
+                  <property name="margin-bottom">24</property>
+                  <style>
+                    <class name="title-4"/>
+                  </style>
+                </object>
+              </child> -->
+              <child>
+                <object class="GtkBox">
+                  <property name="orientation">vertical</property>
+                  <property name="margin-start">16</property>
+                  <property name="margin-end">16</property>
+                  <property name="margin-top">16</property>
+                  <property name="margin-bottom">16</property>
+                  <child>
+                    <object class="GtkFrame">
+                      <property name="width-request">172</property>
+                      <property name="height-request">172</property>
+                      <property name="margin-bottom">24</property>
+                      <child>
+                        <object class="GtkDrawingArea" id="preview_image">
+                          <property name="margin-top">24</property>
+                          <property name="margin-bottom">24</property>
+                          <property name="margin-start">24</property>
+                          <property name="margin-end">24</property>
+                          <style>
+                            <class name="icon-grid__image" />
+                          </style>
+                        </object>
+                      </child>
+                    </object>
+                  </child>
+
+                  <child>
+                    <object class="GtkListBox">
+                      <property name="selection-mode">none</property>
+                      <style>
+                        <class name="boxed-list"/>
+                      </style>
+                      <child>
+                        <object class="AdwActionRow">
+                          <property name="title" translatable="yes">Name</property>
+                          <property name="subtitle" bind-source="IcoDetailsPanel" bind-property="iconLabel" bind-flags="sync-create"/>
+                          <property name="subtitle-selectable">True</property>
+                          <style>
+                            <class name="property"/>
+                          </style>
+                        </object>
+                      </child>
+                      <child>
+                        <object class="AdwExpanderRow">
+                          <property name="title" translatable="true">Tags</property>
+                          <property name="subtitle">weather, sky, cloudy</property>
+                          <style>
+                            <class name="property"/>
+                          </style>
+                          <child>
+                            <object class="AdwActionRow">
+                              <property name="title" translatable="true">weather</property>
+                              <child type="suffix">
+                                <object class="GtkButton">
+                                  <property name="icon-name">edit-delete-symbolic</property>
+                                  <property name="valign">3</property>
+                                </object>
+                              </child>
+                            </object>
+                          </child>
+                          <child>
+                            <object class="AdwActionRow">
+                              <property name="title" translatable="true">sky</property>
+                              <child type="suffix">
+                                <object class="GtkButton">
+                                  <property name="icon-name">edit-delete-symbolic</property>
+                                  <property name="valign">3</property>
+                                </object>
+                              </child>
+                            </object>
+                          </child>
+                          <child>
+                            <object class="AdwActionRow">
+                              <property name="title" translatable="true">cloudy</property>
+                              <child type="suffix">
+                                <object class="GtkButton">
+                                  <property name="icon-name">edit-delete-symbolic</property>
+                                  <property name="valign">3</property>
+                                </object>
+                              </child>
+                            </object>
+                          </child>
+                          <child>
+                            <object class="AdwEntryRow">
+                              <property name="title" translatable="true">Add a tag</property>
+                            </object>
+                          </child>
+                        </object>
+                      </child>
+                    </object>
+                  </child>
+
+                  <child>
+                    <object class="GtkListBox">
+                      <property name="selection-mode">none</property>
+                      <property name="margin-top">16</property>
+                      <style>
+                        <class name="boxed-list"/>
+                      </style>
+                      <child>
+                        <object class="AdwActionRow">
+                          <property name="title" translatable="yes">Style</property>
+                          <property name="subtitle">Outline</property>
+                          <child type="suffix">
+                            <object class="GtkMenuButton">
+                              <property name="valign">3</property>
+                              <property name="icon-name">document-edit-symbolic</property>
+                              <property name="tooltip-text" translatable="true">Edit style</property>
+                              <property name="popover">details_style_popover</property>
+                              <property name="direction">2</property>
+                              <style>
+                                <class name="flat"/>
+                              </style>
+                            </object>
+                          </child>
+                          <style>
+                            <class name="property"/>
+                          </style>
+                        </object>
+                      </child>
+                      <!--
+                      <child>
+                        <object class="AdwActionRow">
+                          <property name="title" translatable="yes">Color</property>
+                          <child>
+                            <object class="GtkColorDialogButton" id="color_dialog_button">
+                              <property name="valign">3</property>
+                            </object>
+                          </child>
+                        </object>
+                      </child>
+                      -->
+                      <!-- This wouldn't work for a resource file, only for a file in the data directory.
+                      <child>
+                        <object class="AdwActionRow">
+                          <property name="title" translatable="yes">Filename</property>
+                          <property name="subtitle">Filename.svg</property>
+                          <child type="suffix">
+                            <object class="GtkButton">
+                              <property name="icon-name">folder-open-symbolic</property>
+                              <property name="valign">3</property>
+                              <style>
+                                <class name="flat"/>
+                              </style>
+                            </object>
+                          </child>
+                        </object>
+                      </child> -->
+                      <child>
+                        <object class="AdwActionRow" id="icon_size_row">
+                          <property name="title" translatable="yes">Original size (px)</property>
+                          <property name="subtitle-selectable">True</property>
+                          <style>
+                            <class name="property"/>
+                          </style>
+                        </object>
+                      </child>
+                    </object>
+                  </child>
+                </object>
+              </child>
           </object>
-        </child> -->
-            <child>
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <property name="margin-start">16</property>
-                <property name="margin-end">16</property>
-                <property name="margin-top">16</property>
-                <property name="margin-bottom">16</property>
-                <child>
-                  <object class="GtkFrame">
-                    <property name="width-request">172</property>
-                    <property name="height-request">172</property>
-                    <property name="margin-bottom">24</property>
-                    <child>
-                      <object class="GtkDrawingArea" id="preview_image">
-                        <property name="margin-top">24</property>
-                        <property name="margin-bottom">24</property>
-                        <property name="margin-start">24</property>
-                        <property name="margin-end">24</property>
-                        <style>
-                          <class name="icon-grid__image" />
-                        </style>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-
-                <child>
-                  <object class="GtkListBox">
-                    <property name="selection-mode">none</property>
-                    <style>
-                      <class name="boxed-list"/>
-                    </style>
-                    <child>
-                      <object class="AdwActionRow">
-                        <property name="title" translatable="yes">Name</property>
-                        <property name="subtitle" bind-source="IcoDetailsPanel" bind-property="iconLabel" bind-flags="sync-create"/>
-                        <property name="subtitle-selectable">True</property>
-                        <style>
-                          <class name="property"/>
-                        </style>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="AdwExpanderRow">
-                        <property name="title" translatable="true">Tags</property>
-                        <property name="subtitle">weather, sky, cloudy</property>
-                        <style>
-                          <class name="property"/>
-                        </style>
-                        <child>
-                          <object class="AdwActionRow">
-                            <property name="title" translatable="true">weather</property>
-                            <child type="suffix">
-                              <object class="GtkButton">
-                                <property name="icon-name">edit-delete-symbolic</property>
-                                <property name="valign">3</property>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AdwActionRow">
-                            <property name="title" translatable="true">sky</property>
-                            <child type="suffix">
-                              <object class="GtkButton">
-                                <property name="icon-name">edit-delete-symbolic</property>
-                                <property name="valign">3</property>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AdwActionRow">
-                            <property name="title" translatable="true">cloudy</property>
-                            <child type="suffix">
-                              <object class="GtkButton">
-                                <property name="icon-name">edit-delete-symbolic</property>
-                                <property name="valign">3</property>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AdwEntryRow">
-                            <property name="title" translatable="true">Add a tag</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-
-                <child>
-                  <object class="GtkListBox">
-                    <property name="selection-mode">none</property>
-                    <property name="margin-top">16</property>
-                    <style>
-                      <class name="boxed-list"/>
-                    </style>
-                    <child>
-                      <object class="AdwActionRow">
-                        <property name="title" translatable="yes">Style</property>
-                        <property name="subtitle">Outline</property>
-                        <child type="suffix">
-                          <object class="GtkMenuButton">
-                            <property name="valign">3</property>
-                            <property name="icon-name">document-edit-symbolic</property>
-                            <property name="tooltip-text" translatable="true">Edit style</property>
-                            <property name="popover">details_style_popover</property>
-                            <property name="direction">2</property>
-                            <style>
-                              <class name="flat"/>
-                            </style>
-                          </object>
-                        </child>
-                        <style>
-                          <class name="property"/>
-                        </style>
-                      </object>
-                    </child>
-                    <!--
-                    <child>
-                      <object class="AdwActionRow">
-                        <property name="title" translatable="yes">Color</property>
-                        <child>
-                          <object class="GtkColorDialogButton" id="color_dialog_button">
-                            <property name="valign">3</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    -->
-                    <!-- This wouldn't work for a resource file, only for a file in the data directory.
-                    <child>
-                      <object class="AdwActionRow">
-                        <property name="title" translatable="yes">Filename</property>
-                        <property name="subtitle">Filename.svg</property>
-                        <child type="suffix">
-                          <object class="GtkButton">
-                            <property name="icon-name">folder-open-symbolic</property>
-                            <property name="valign">3</property>
-                            <style>
-                              <class name="flat"/>
-                            </style>
-                          </object>
-                        </child>
-                      </object>
-                    </child> -->
-                    <child>
-                      <object class="AdwActionRow" id="icon_size_row">
-                        <property name="title" translatable="yes">Original size (px)</property>
-                        <property name="subtitle-selectable">True</property>
-                        <style>
-                          <class name="property"/>
-                        </style>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
+        </property>
+        <child type="bottom">
           <object class="GtkBox">
             <property name="orientation">vertical</property>
             <style>
-              <class name="detailsPanelActionBox"/>
+              <class name="toolbar"/>
             </style>
             <child>
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
                 <property name="spacing">8</property>
-                <property name="margin-start">16</property>
-                <property name="margin-end">16</property>
-                <property name="margin-top">16</property>
-                <property name="margin-bottom">16</property>
+                <style>
+                  <class name="m-4"/>
+                </style>
                 <!--
                 <child>
                   <object class="AdwSplitButton">
@@ -320,7 +317,6 @@
             </child>
           </object>
         </child>
-
       </object>
     </child>
 
