--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,6 +43,9 @@
 .m-2 {
   margin: 0.5rem;
 }
+.m-1 {
+  margin: 0.25rem;
+}
 
 
 .mb-24 {
@@ -63,6 +66,9 @@
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 
 
 .mt-24 {
@@ -82,6 +88,9 @@
 }
 .mt-2 {
   margin-top: 0.5rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 
@@ -109,6 +118,10 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
 
 
 .mx-24 {
@@ -135,6 +148,10 @@
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
 
 
 /* Padding */
@@ -157,6 +174,12 @@
 .p-2 {
   padding: 0.5rem;
 }
+.p-1 {
+  padding: 0.25rem;
+}
+.p-0 {
+  padding: 0rem;
+}
 
 
 .pb-24 {
@@ -178,6 +201,10 @@
   padding-bottom: 0.5rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
 
 .pt-24 {
   padding-top: 4rem;
@@ -196,6 +223,9 @@
 }
 .pt-2 {
   padding-top: 0.5rem;
+}
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 
@@ -223,6 +253,10 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
 
 
 .px-24 {
@@ -248,4 +282,8 @@
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
