--- a/src/ui/AllSetsStackView.ui
+++ b/src/ui/AllSetsStackView.ui
@@ -28,11 +28,10 @@
               </object>
             </child>
             <child>
-              <object class="GtkFrame">
+              <object class="GtkFrame" id="installed_sets_empty_state">
               <style>
                 <class name="px-8"/>
                 <class name="py-24"/>
-                <class name="mb-16"/>
                 <class name="dropTargetFrame"/>
               </style>
                 <property name="child">
@@ -67,17 +66,31 @@
             </child>
 
             <child>
+              <object class="GtkFlowBox" id="installed_sets_flowbox">
+                <property name="orientation">0</property>
+                <property name="row-spacing">16</property>
+                <property name="column-spacing">16</property>
+                <property name="homogeneous">true</property>
+                <property name="max-children-per-line">-1</property>
+                <property name="min-children-per-line">1</property>
+                <property name="selection-mode">single</property>
+                <property name="vexpand">0</property>
+              </object>
+            </child>
+
+            <child>
               <object class="GtkLabel">
                 <property name="label">Get more sets</property>
                 <property name="halign">1</property>
                 <style>
                   <class name="title-2"/>
                   <class name="mb-6"/>
+                  <class name="mt-16"/>
                 </style>
               </object>
             </child>
             <child>
-              <object class="GtkFlowBox" id="sets_flowbox">
+              <object class="GtkFlowBox" id="default_sets_flowbox">
                 <property name="orientation">0</property>
                 <property name="row-spacing">16</property>
                 <property name="column-spacing">16</property>
