Added placeholder "Open in Files" button. Commented out as cannot highlight the file in the File Manager app and no way to write changes to the file back into its metadata (e.g. change in style or size or name)

--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -151,6 +151,14 @@
                           <style>
                             <class name="property"/>
                           </style>
+                          <!--
+                          <child type="suffix">
+                            <object class="GtkButton">
+                              <property name="icon-name">system-file-manager-symbolic</property>
+                              <property name="valign">3</property>
+                              <signal name="clicked" handler="onOpenLocation"/>
+                            </object>
+                          </child> -->
                         </object>
                       </child>
                       <child>
